--- a/v3/APL_v3_android_menu/res/layout/main3.xml
+++ b/v3/APL_v3_android_menu/res/layout/main3.xml
@@ -4,15 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <WebView
+        android:id="@+id/webView1"
+        android:layout_width="match_parent"
+        android:layout_height="446dp" />
+
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Close" />
-
-    <WebView
-        android:id="@+id/webView1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:text="Ok" />
 
 </LinearLayout>
