--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,77 +15,73 @@
   <TextView
       android:id="@+id/textView5"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="14dp"
+      android:layout_height="110dp"
+      android:layout_margin="16dp"
       android:padding="75dp"
       android:text=""
       android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <TableRow
-        android:id="@+id/tableRow1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+  <TableRow
+      android:id="@+id/tableRow1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="                    "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+      <TextView
+          android:id="@+id/textView6"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="                "
+          android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <ImageButton
-            android:id="@+id/imageButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/c_back" 
-            android:padding="54dip"/>
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:padding="27dip" />
+      <ImageButton
+          android:id="@+id/imageButton1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/c_back"
+          android:padding="54dip" />
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/cpp_back" 
-             android:padding="54dip"/>
+      <TextView
+          android:id="@+id/textView1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:padding="27dip"
+          android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:padding="27dip"
-             />
+      <ImageButton
+          android:id="@+id/imageButton2"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/cpp_back"
+          android:padding="54dip" />
 
-        <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/python_back" 
-            android:padding="54dip"/>
+      <TextView
+          android:id="@+id/textView1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:padding="27dip"
+          android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge" 
-            android:padding="27dip"/>
+      <ImageButton
+          android:id="@+id/imageButton3"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/python_back"
+          android:padding="54dip" />
 
-        <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/scilab"
-            android:padding="54dip" />
-        
-    </TableRow>
+      <TextView
+          android:id="@+id/textView1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:padding="27dip"
+          android:textAppearance="?android:attr/textAppearanceLarge" />
+
+      <ImageButton
+          android:id="@+id/imageButton4"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:background="@drawable/scilab"
+          android:padding="54dip" />
+  </TableRow>
 
     <TableRow
         android:id="@+id/tableRow2"
@@ -131,7 +127,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="      Python"
+            android:text="     Python"
             android:textAppearance="?android:attr/textAppearanceLarge" />
         <TextView
             android:id="@+id/textView1"
