--- a/res/layout/help_popup.xml
+++ b/res/layout/help_popup.xml
@@ -1,32 +1,72 @@
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="fill_parent" >
+        
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
         android:id="@+id/layout_root" >
 
-        <ImageButton android:id="@+id/scolab"
-           android:focusable="false"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:background="@drawable/scilab"
-           android:layout_gravity="center"/>
-
         <TextView
-            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="10dp"
+            android:singleLine="false"
+            android:text="@string/help_para1"
+            android:textColor="#FFFFFF" 
+            android:textSize="16dp"/>
+        
+        <ImageView
+           android:focusable="false"
+           android:layout_width="300dp"
+           android:layout_height="180dp"
+           android:background="@drawable/apl_new"
+           android:layout_gravity="center"/>
+        
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:padding="20dp"
             android:singleLine="false"
-            android:text="@string/somestring"
-            android:textColor="#FFFFFF" />
+            android:text="@string/help_para2"
+            android:textColor="#FFFFFF"
+            android:textSize="16dp" />
+        
+        <ImageView
+           android:focusable="false"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:background="@drawable/option_button_new"
+           android:layout_gravity="center"/>
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="20dp"
+            android:singleLine="false"
+            android:text="@string/help_para3"
+            android:textColor="#FFFFFF"
+            android:textSize="16dp" />
 
+        <ImageView
+           android:focusable="false"
+           android:layout_width="500dp"
+           android:layout_height="50dp"
+           android:background="@drawable/horizontal_menubar_new"
+           android:layout_gravity="center"/>
+        
         <CheckBox
-            android:id="@+id/checkBox1"
+            android:id="@+id/cbHelp"
             android:layout_width="196dp"
             android:layout_height="wrap_content"
-            android:text="Dont Ask Me Later" />
+            android:text="Don&apos;t Ask Me Later" />
         
     </LinearLayout>
+</ScrollView>
